--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "react-ios-time-picker",
+   "name": "kapil-react-ios-time-picker",
    "version": "0.2.2",
    "description": "A modern time picker for your React app.",
    "main": "dist/TimePicker.js",
