--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
       "README.md"
    ],
    "dependencies": {
-      "react-portal": "^4.2.2"
+      "react-portal": "^4.2.2",
+      "webpack-dev-server": "^4.15.1"
    },
    "scripts": {
+      "start": "webpack serve --mode development",
       "build": "webpack --mode production",
       "eslint": "eslint src --ext .js,.jsx",
       "eslint:fix": "npm run eslint -- --fix",
